# screen-printer

./: .gitignore  INSTALL_KIOSK_AUTOSTART.command  Install Kiosk Autostart.desktop  Power Off Pi.desktop  README.md  START_SCREEN_PRINTER.command  START_SCREEN_PRINTER_KIOSK.command  Screen Printer Kiosk.desktop  Screen Printer.desktop  THIRD_PARTY_NOTICES.md  pyproject.toml  run-screen-printer.sh  run.bat  setup.bat  test.bat
scripts/: confirm_poweroff.sh  install_kiosk_autostart.sh  install_pi.sh  run_kiosk.sh  run_pi.sh
src/screen_printer/: app.py  icons.py  image_ops.py  library.py  session.py  sidecar.py
src/screen_printer/assets/material_symbols/: README.md
tests/: test_app_cli.py  test_image_ops.py  test_library.py  test_pi_scripts.py  test_session.py  test_sidecar.py
